<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/logoDescription"
        android:src="@drawable/logo_text" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp" >

        <Button
            android:id="@+id/btn_createGroup"
            android:onClick="startCreateGroupActivity"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/createGroup"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_joinGroup"
            android:onClick="startJoinGroupActivity"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/joinGroup"
            android:textSize="13sp" />
			
    </LinearLayout>

    <ImageView
        android:id="@+id/btn_info"
        android:layout_width="30dp"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/info"      
        android:src="@drawable/info" />

</LinearLayout>