<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText1"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:inputType="textNoSuggestions"
        android:layout_height="wrap_content"
        android:text="@string/searchGN"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/leilighet"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_gravity="right"
            android:contentDescription="@string/plus"
            android:src="@drawable/join" />

    </LinearLayout>

</LinearLayout>
