<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logoDescription"
        android:src="@drawable/text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="360dp"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnLogIn"
            android:onClick="startLogInActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCreateAccount"
        android:onClick="startCreateAccountActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createAccount" />

</LinearLayout>