<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="#dddddd" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="54dp"
            android:contentDescription="@string/logo"
            android:layout_height="34dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginLeft="5dp"
            android:src="@drawable/back" />

        <ImageView
            android:id="@+id/imageView5"
            android:contentDescription="@string/logo"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/imageView1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/addmember" />

    </RelativeLayout>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchUsername"
        android:inputType="text"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/unniTran2"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageView2"
            android:contentDescription="@string/logo"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_gravity="right"
            android:src="@drawable/plus" />

    </LinearLayout>

</LinearLayout>
